[package]
name = "lavap-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "consumer"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
base64 = "0.22.1"
byteorder = "1.5.0"
hex = "0.4.3"
hmac = "0.12.1"
k256 = "0.13.3"
log = "0.4.21"
prost = "0.12.6"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
structopt = "0.3.26"
tokio = { version = "1.38.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["tls", "tls-roots", "transport"] }
uuid = { version = "1.8.0", features = ["v4"] }
thiserror = "1.0"
ripemd = "0.1.3"
subtle-encoding = { version = "0.5.1", features = ["bech32-preview"] }
reqwest = { version = "0.12.5", features = ["json"] }
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.11"
